--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+debug = true
+
 [dependencies]
 ansi_term = "0.12"
 crossterm = "0.22.1"
 itertools = "0.10"
 num = "0.4"
+petgraph = "0.6"
 regex = "1"
