--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,12 @@ debug = true
 
 [dependencies]
 ansi_term = "0.12"
-crossterm = "0.22.1"
+crossterm = "0.23"
 itertools = "0.10"
+nom = "7.1.0"
+nom-supreme = "0.7.0"
 num = "0.4"
 petgraph = "0.6"
 regex = "1"
+rayon = "1.5.1"
+indicatif = "0.16.2"
