--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,6 @@
 name = "adv2021"
 version = "0.1.0"
 edition = "2021"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [profile.release]
@@ -10,12 +9,13 @@ debug = true
 
 [dependencies]
 ansi_term = "0.12"
-crossterm = "0.23"
+crossterm = "0.24.0"
+indicatif = "0.16"
 itertools = "0.10"
+ndarray = "0.15.4"
 nom = "7.1"
-nom-supreme = "0.7.0"
+nom-supreme = "0.8.0"
 num = "0.4"
 petgraph = "0.6"
-regex = "1"
 rayon = "1"
-indicatif = "0.16"
+regex = "1"
